# ez-support

./: .gitmodules  CMakeLists.txt  compile-options.cmake  custom-build-profiles.cmake  dependencies.cmake  tests-config.cmake
ez/: CMakeLists.txt
ez/support/: CMakeLists.txt
ez/support/include/mp/support/: c++23-features.h
ez/support/tests/: CMakeLists.txt  c++23-features.test.cpp
include/ez/support/: definitions.h  std23.h
mp/support/: CMakeLists.txt
mp/support/include/mp/support/: c++23-features.h
mp/support/tests/: CMakeLists.txt  c++23-features.test.cpp
tests/: CMakeLists.txt  std23.test.cpp
